// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should handle PostCSS options 1`] = `
"/* __tests__/fixtures/postcss-options/index.sss */
.parent > .child {
  color: black;
}
"
`;

exports[`should handle child css import 1`] = `
"/* __tests__/fixtures/config-file/_root.css */
:root {
  --color: blue;
}

/* __tests__/fixtures/config-file/features/nested.css */
.a .b {
  color: black;
}

/* __tests__/fixtures/config-file/features/properties.css */
:root {
  --background-color: yellow;
}
button {
  background-color: yellow;
  background-color: var(--background-color);
  color: var(--color);
}

/* __tests__/fixtures/config-file/import.css */
body {
  padding: 0;
  color: var(--color);
}
"
`;

exports[`should handle child css import url 1`] = `
"/* __tests__/fixtures/config-file/_root.css */
:root {
  --color: blue;
}

/* __tests__/fixtures/config-file/features/nested.css */
.a .b {
  color: black;
}

/* __tests__/fixtures/config-file/features/properties.css */
:root {
  --background-color: yellow;
}
button {
  background-color: yellow;
  background-color: var(--background-color);
  color: var(--color);
}

/* __tests__/fixtures/config-file/import-url.css */
body {
  padding: 0;
  color: var(--color);
}
"
`;

exports[`should handle css file entry 1`] = `
"/* __tests__/fixtures/config-file/index.css */
:root {
  --color: red;
}
h1 {
  color: red;
  color: var(--color);
}
.x_y {
  width: auto;
}
"
`;

exports[`should handle css imports 1`] = `
"/* __tests__/fixtures/config-file/index.css */
:root {
  --color: red;
}
h1 {
  color: red;
  color: var(--color);
}
.x_y {
  width: auto;
}
"
`;

exports[`should handle no config file 1`] = `
"/* __tests__/fixtures/no-config-file/button.css */
button {
  border: 1px solid red;
}

/* __tests__/fixtures/no-config-file/index.css */
body {
  padding: 0;
}
"
`;

exports[`should handle postcss-import style inlining plugin 1`] = `
"/* __tests__/fixtures/postcss-import/index.css */
:root {
  --color: blue;
}
:root {
  --background-color: yellow;
}
button {
  background-color: yellow;
  background-color: var(--background-color);
  color: blue;
  color: var(--color);
}
body {
  padding: 0;
  color: blue;
  color: var(--color);
}
"
`;

exports[`should handle postcss-import style inlining plugin via import url 1`] = `
"/* __tests__/fixtures/postcss-import/index-import-url.css */
:root {
  --color: blue;
}
:root {
  --background-color: yellow;
}
button {
  background-color: yellow;
  background-color: var(--background-color);
  color: blue;
  color: var(--color);
}
body {
  padding: 0;
  color: blue;
  color: var(--color);
}
"
`;

exports[`should use extensions option 1`] = `
"/* __tests__/fixtures/config-file/index.pcss */
:root {
  --color: red;
}
h1 {
  color: red;
  color: var(--color);
}
.x_y {
  width: auto;
}
"
`;

exports[`should use extensions option with no config 1`] = `
"/* __tests__/fixtures/no-config-file/button.css */
button {
  border: 1px solid red;
}

/* __tests__/fixtures/no-config-file/index.pcss */
body {
  padding: 0;
}
"
`;
